--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,4 +47,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     implementation 'jp.wasabeef:richeditor-android:1.2.2'
     implementation 'cljsjs:bootstrap:3.3.6-1'
+    implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
 }
