--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,4 +48,5 @@ dependencies {
     implementation 'jp.wasabeef:richeditor-android:1.2.2'
     implementation 'cljsjs:bootstrap:3.3.6-1'
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+    implementation "com.android.support:support-compat:28.0.0"
 }
